--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -7,14 +7,21 @@
     <link rel="stylesheet" href="../CSS/Main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="../JS/Main.js" defer></script>
+    <script src="../JS/burgerMenu.js" defer></script>
 </head>
 <body>
     <header>
         <img src="../IMG/Namnlös-removebg-preview(1).png" alt="bird" id="logo">
-        <i class="material-icons">menu</i>
+        <i class="material-icons"  id="burgerButton">menu</i>
     </header>
 
     <main class="mainGrid1" id="Main">
+        <section id="glider" class="glide2">
+            <i class="material-icons" id="close">close</i>
+            <a href="../HTML/Index.html">1</a>
+            <a href="../HTML/Main.html">2</a>
+            <a href="../HTML/profile.html">3</a>
+        </section>
         <aside>
             <!-- This should move to the side if the screen is big enough -->
             <h3>What do you want to see?</h3>
