--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -6,11 +6,18 @@
     <title>Log in</title>
     <link rel="stylesheet" href="../CSS/Index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="../JS/burgerMenu.js" defer></script>
 </head>
 <body>
+    <section id="glider" class="glide2">
+        <i class="material-icons" id="close">close</i>
+        <a href="../HTML/Index.html">1</a>
+        <a href="../HTML/Main.html">2</a>
+        <a href="../HTML/profile.html">3</a>
+    </section>
     <header>
         <img src="../IMG/Namnlös-removebg-preview(1).png" alt="bird" id="logo">
-        <i class="material-icons">menu</i>
+        <i class="material-icons"  id="burgerButton">menu</i>
     </header>
 
     <main id="grid">
