--- a/HTML/newPost.html
+++ b/HTML/newPost.html
@@ -17,9 +17,9 @@
     
     <section id="glider" class="glide2">
         <i class="material-icons" id="close">close</i>
-        <a href="../HTML/Index.html">1</a>
-        <a href="../HTML/Main.html">2</a>
-        <a href="../HTML/profile.html">3</a>
+        <a href="../HTML/Index.html">Login Page</a>
+        <a href="../HTML/Main.html">Main Page</a>
+        <a href="../HTML/profile.html">Settings</a>
     </section>
 
     <main>
@@ -40,5 +40,10 @@
             <button onclick="" id="postButton">Post</button>
         </section>
     </main>
+    <footer>
+        <a href="../HTML/Main.html">Main Page</a>
+        <a href="../HTML/Index.html">Login Page</a>
+        <a href="../HTML/profile.html">Settings</a>
+    </footer>
 </body>
 </html>
