--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -18,37 +18,55 @@
 
     <section id="glider" class="glide2">
         <i class="material-icons" id="close">close</i>
-        <a href="Index.html">1</a>
-        <a href="Main.html">2</a>
-        <a href="profile.html">3</a>
+        <a href="../HTML/Index.html">Login Page</a>
+        <a href="../HTML/newPost.html">New Post</a>
+        <a href="../HTML/profile.html">Settings</a>
     </section>
 
     <main class="mainGrid1" id="Main">
         <aside>
             <!-- This should move to the side if the screen is big enough -->
             <h3>What do you want to see?</h3>
-            <a href="" class="button">Politics</a>
-            <a href="" class="button">Memes</a>
-            <a href="" class="button">Technology</a>
+            <div>
+                <button class="button" id="politics">Politics</button>
+            </div>
+            <div>
+                <button class="button" id="memes">Memes</button>
+            </div>
+            <div>
+                <button class="button" id="technology">Technology</button>
+            </div>
         </aside>
 
         <section>
-            <!-- Articles are inserted here -->
+            <!-- Articles are inserted here via JS with title, user that posted and text -->
             <article id="article1">
-                <h3 id="title1"></h3>
+                <h3 class="title" id="title1"></h3>
+                <i class="username" id="user1"></i>
                 <p id="text1"></p>
             </article>
 
             <article id="article2">
-                <h3 id="title2"></h3>
+                <h3 class="title" id="title2"></h3>
+                <i class="username" id="user2"></i>
                 <p id="text2"></p>
             </article>
 
             <article id="article3">
-                <h3 id="title3"></h3>
+                <h3 class="title" id="title3"></h3>
+                <i class="username" id="user3"></i>
                 <p id="text3"></p>
             </article>
         </section>
+        <section id="noPosts">
+            <h2>No Posts Found</h2>
+            <p>Consider contributing using the create page!</p>
+        </section>
     </main>
+    <footer>
+        <a href="../HTML/Index.html">Login Page</a>
+        <a href="../HTML/newPost.html">New Post</a>
+        <a href="../HTML/profile.html">Settings</a>
+    </footer>
 </body>
 </html>
