--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -22,6 +22,31 @@
     </header>
 
     <main>
+        <section id="boxWelcome">
+            <ul>
+                <li class="centerText">
+                    <h2>Welcome!</h2>
+                </li>
+                <li class="centerText">
+                    <h2>Already have an account?</h2>
+                </li>
+                <li class="centerText">
+                    <button class="button" id="redirLogIn">Log in</button>
+                </li>
+                <li class="centerText">
+                    <h2>New here?</h2>
+                </li>
+                <li class="centerText">
+                    <button class="button" id="redirNew">Create an account</button>
+                </li>
+                <li class="centerText">
+                    <h2>Or just want to browse?</h2>
+                </li>
+                <li class="centerText">
+                    <button class="button" id="redirMain">Continue as guest</button>
+                </li>
+            </ul>
+        </section>
         <section id="boxLogin">
             <ul>
                 <li>
@@ -75,11 +100,5 @@
             </ul>
         </section>
     </main>
-
-    <footer>
-        <a href="../HTML/Main.html">Main Page</a>
-        <a href="../HTML/newPost.html">New Post</a>
-        <a href="../HTML/profile.html">Settings</a>
-    </footer>
 </body>
 </html>
