--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -25,7 +25,7 @@
 
     <main class="mainGrid1" id="Main">
         <aside>
-            <!-- This should move to the side if the screen is big enough -->
+            <!-- This moves to the side if the screen is big enough -->
             <h3>What do you want to see?</h3>
             <div>
                 <button class="button" id="politics">Politics</button>
