--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -12,9 +12,9 @@
 <body>
     <section id="glider" class="glide2">
         <i class="material-icons" id="close">close</i>
-        <a href="../HTML/Main.html">Main Page</a>
-        <a href="../HTML/newPost.html">New Post</a>
-        <a href="../HTML/profile.html">Settings</a>
+        <a href="../HTML/Main.html" class="button">Main Page</a>
+        <a href="../HTML/newPost.html" class="button">New Post</a>
+        <a href="../HTML/profile.html" class="button">Settings</a>
     </section>
     <header>
         <img src="../IMG/Namnlös-removebg-preview(1).png" alt="bird" id="logo">
