--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     <header>
-        <img src="../IMG/Namnlös-removebg-preview(1).png" alt="bird" id="logo">
+        <img src="../IMG/Namnlös-removebg-preview(1).png" alt="bird" id="logo" onclick="location.href='../HTML/Main.html'">
         <a href="newPost.html" class="button" id="newPost">New Blames</a>
         <i class="material-icons"  id="burgerButton">menu</i>
     </header>
 
     <section id="glider" class="glide2">
         <i class="material-icons" id="close">close</i>
-        <a href="../HTML/Index.html">Login Page</a>
-        <a href="../HTML/newPost.html">New Post</a>
-        <a href="../HTML/profile.html">Settings</a>
+        <a href="../HTML/Index.html" class="button">Login Page</a>
+        <a href="../HTML/newPost.html" class="button">New Post</a>
+        <a href="../HTML/profile.html" class="button">Settings</a>
     </section>
 
     <main class="mainGrid1" id="Main">
@@ -64,9 +64,9 @@
         </section>
     </main>
     <footer>
-        <a href="../HTML/Index.html">Login Page</a>
-        <a href="../HTML/newPost.html">New Post</a>
-        <a href="../HTML/profile.html">Settings</a>
+        <a href="../HTML/Index.html" class="button">Login Page</a>
+        <a href="../HTML/newPost.html" class="button">New Post</a>
+        <a href="../HTML/profile.html" class="button">Settings</a>
     </footer>
 </body>
 </html>
