--- a/HTML/newPost.html
+++ b/HTML/newPost.html
@@ -11,15 +11,15 @@
 </head>
 <body>
     <header>
-        <img src="../IMG/Namnlös-removebg-preview(1).png" alt="bird" id="logo">
+        <img src="../IMG/Namnlös-removebg-preview(1).png" alt="bird" id="logo" onclick="location.href='../HTML/Main.html'">
         <i class="material-icons" id="burgerButton">menu</i>
     </header>
     
     <section id="glider" class="glide2">
         <i class="material-icons" id="close">close</i>
-        <a href="../HTML/Index.html">Login Page</a>
-        <a href="../HTML/Main.html">Main Page</a>
-        <a href="../HTML/profile.html">Settings</a>
+        <a href="../HTML/Index.html" class="button">Login Page</a>
+        <a href="../HTML/Main.html" class="button">Main Page</a>
+        <a href="../HTML/profile.html" class="button">Settings</a>
     </section>
 
     <main>
@@ -41,9 +41,9 @@
         </section>
     </main>
     <footer>
-        <a href="../HTML/Main.html">Main Page</a>
-        <a href="../HTML/Index.html">Login Page</a>
-        <a href="../HTML/profile.html">Settings</a>
+        <a href="../HTML/Main.html" class="button">Main Page</a>
+        <a href="../HTML/Index.html" class="button">Login Page</a>
+        <a href="../HTML/profile.html" class="button">Settings</a>
     </footer>
 </body>
 </html>
