--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -15,6 +15,7 @@
         <a href="../HTML/Main.html" class="button">Main Page</a>
         <a href="../HTML/newPost.html" class="button">New Post</a>
         <a href="../HTML/profile.html" class="button">Settings</a>
+        <a href="../HTML/about.html" class="button">About us</a>
     </section>
     <header>
         <img src="../IMG/Namnlös-removebg-preview(1).png" alt="bird" id="logo">
@@ -22,7 +23,7 @@
     </header>
 
     <main>
-        <section id="boxWelcome">
+        <section id="boxWelcome" class="box">
             <ul>
                 <li class="centerText">
                     <h2>Welcome!</h2>
@@ -47,7 +48,7 @@
                 </li>
             </ul>
         </section>
-        <section id="boxLogin">
+        <section id="boxLogin" class="box">
             <ul>
                 <li>
                     <h2 class="centerText">Log in</h2>
@@ -74,7 +75,7 @@
             </ul>
         </section>
 
-        <section id="boxNew">
+        <section id="boxNew" class="box">
             <ul>
                 <li>
                     <h2 class="centerText">Create Account</h2>
