--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -21,11 +21,11 @@
         <a href="../HTML/Index.html" class="button">Login Page</a>
         <a href="../HTML/newPost.html" class="button">New Post</a>
         <a href="../HTML/profile.html" class="button">Settings</a>
+        <a href="../HTML/about.html" class="button">About us</a>
     </section>
 
     <main class="mainGrid1" id="Main">
         <aside>
-            <!-- This moves to the side if the screen is big enough -->
             <h3>What do you want to see?</h3>
             <div>
                 <button class="button" id="politics">Politics</button>
@@ -39,7 +39,7 @@
         </aside>
 
         <section>
-            <!-- Articles are inserted here via JS with title, user that posted and text -->
+            <!-- Articles are inserted here via JS with title, user that posted, and text -->
             <article id="article1">
                 <h3 class="title" id="title1"></h3>
                 <i class="username" id="user1"></i>
@@ -67,6 +67,7 @@
         <a href="../HTML/Index.html" class="button">Login Page</a>
         <a href="../HTML/newPost.html" class="button">New Post</a>
         <a href="../HTML/profile.html" class="button">Settings</a>
+        <a href="../HTML/about.html" class="button">About us</a>
     </footer>
 </body>
 </html>
