--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -20,6 +20,7 @@
         <a href="../HTML/Index.html" class="button">Login Page</a>
         <a href="../HTML/Main.html" class="button">Main Page</a>
         <a href="../HTML/newPost.html" class="button">New Post</a>
+        <a href="../HTML/about.html" class="button">About us</a>
     </section>
 
 
@@ -71,6 +72,7 @@
         <a href="../HTML/Index.html" class="button">Login Page</a>
         <a href="../HTML/Main.html" class="button">Main Page</a>
         <a href="../HTML/newPost.html" class="button">New Post</a>
+        <a href="../HTML/about.html" class="button">About us</a>
     </footer>
 </body>
 </html>
